tests/specs/run/unsafe_proto_suggestion/read_and_throw.out
error: Uncaught (in promise) TypeError: Cannot read properties of undefined (reading 'constructor')
who.__proto__.constructor;
[WILDCARD]
    at [WILDCARD]read_and_throw.js:7:15

    info: This program read Object.prototype.__proto__, which Deno disables by default (it returns undefined).
    hint: If this caused the error, run again with --unstable-unsafe-proto to restore it.
